# GitSeek

./: .gitignore  README.md  data_analyze.py  qa.json  smart_health_test
gitseek/: README.md  project_analysis_report.md  project_analysis_report_qa_dataset.json  pyproject.toml
gitseek/output/: architect_data.json  code_review_data.json  community_data.json  project_analysis_report.md  qa.json  question_guide.json  report.md  report_qa_dataset.json  scout_data.json
gitseek/src/gitseek/: crew.py  main.py
gitseek/src/gitseek/config/: agents.yaml  tasks.yaml
gitseek/src/gitseek/tools/: FileContentReader.py  FileSystemBrowser.py  GitHubApiReader.py  GitShellTool.py  LLMCodeSummarizer.py  ReportGenerator.py  SmartQuestionGuide.py
model_test&results/: domain_qa_report_advanced.xlsx  eval_client.py  general_ability_report.xlsx  score_domain_advanced.py  score_general.py
