[project]
name = "gitseek"
version = "0.1.0"
description = "gitseek using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "litellm>=1.79.3",
]

[project.scripts]
gitseek = "gitseek.main:run"
run_crew = "gitseek.main:run"
train = "gitseek.main:train"
replay = "gitseek.main:replay"
test = "gitseek.main:test"
run_with_trigger = "gitseek.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
